--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "learning express",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server,js"
+    "start": "nodemon server.js"
   },
   "author": "sriharsha",
   "license": "ISC",
