--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
-NODE_ENV=  development
+NODE_ENV= development
 USERNAME=sriharsha
-PASSWORD=123456789
+DATABASE=mongodb+srv://tsriharsha02:harsha@11@cluster0.zlmsxie.mongodb.net/?retryWrites=true&w=majority
+DATABASE_PASSWORD=harsha@11
 PORT=8000
