--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
-    "save-dev": "^0.0.1-security"
+    "save-dev": "^0.0.1-security",
+    "slug": "^8.2.2",
+    "validator": "^13.9.0"
   }
 }
