--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV= development
 USERNAME=sriharsha
 DATABASE=mongodb+srv://tsriharsha02:harsha@11@cluster0.zlmsxie.mongodb.net/?retryWrites=true&w=majority
-DATABASE_PASSWORD=harsha@11
+DATABASE_PASSWORD=*********
 PORT=8000
