--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug":"ndb server.js"
+    "debug": "ndb server.js"
   },
   "author": "sriharsha",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^5.13.16",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
