--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 NODE_ENV= development
 USERNAME=sriharsha
-DATABASE=mongodb+srv://tsriharsha02:harsha@11@cluster0.zlmsxie.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://tsriharsha02:**********@cluster0.zlmsxie.mongodb.net/?retryWrites=true&w=majority
 DATABASE_PASSWORD=*********
 PORT=3000
 JWT_SECRET=my-ultra-secure-and-ultra-longlsecret
