--- a/config.env
+++ b/config.env
@@ -5,3 +5,7 @@ DATABASE_PASSWORD=*********
 PORT=3000
 JWT_SECRET=my-ultra-secure-and-ultra-longlsecret
 JWT_EXPIRES_IN=90d
+EMAIL_USERNAME=c50f786a2f5712
+EMAIL_PASSWORD=77204e3baf753f
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
