--- a/config.env
+++ b/config.env
@@ -1,7 +1,12 @@
 NODE_ENV= development
 USERNAME=sriharsha
-DATABASE=mongodb+srv://tsriharsha02:**********@cluster0.zlmsxie.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://tsriharsha02:harsha@11@cluster0.zlmsxie.mongodb.net/?retryWrites=true&w=majority
 DATABASE_PASSWORD=*********
 PORT=3000
 JWT_SECRET=my-ultra-secure-and-ultra-longlsecret
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
+EMAIL_PORT=587
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_USERNAME=f661718a979d82
+EMAIL_PASSWORD=9402c9acac2b8e
