--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.8.7",
     "save-dev": "^0.0.1-security",
     "slug": "^8.2.2",
+    "slugify": "^1.6.6",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   }
