--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "pug": "^3.0.2",
     "save-dev": "^0.0.1-security",
+    "sharp": "^0.32.1",
     "slug": "^8.2.2",
     "slugify": "^1.6.6",
+    "stripe": "^7.63.1",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   }
